fix: config cors of user service